--- a/Uikit/main.html
+++ b/Uikit/main.html
@@ -25,7 +25,7 @@
                         -->
                         <div class="uk-align-right">  
                             <a href="https://www.canva.com/design/DAGE8d4VUZc/NH2yuf0RcDRcgt8wqK62xA/edit?utm_content=DAGE8d4VUZc&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" uk-icon="icon: star; ratio: 7"></a>
-                            <a href="" uk-icon="icon: github; ratio: 7"></a>
+                            <a href="https://github.com/PedroWan/Uikit-trabalho.git" uk-icon="icon: github; ratio: 7"></a>
                             <a href="../Uikit/slide.html" uk-icon="icon: image; ratio: 7"></a>
                             <a href="https://getuikit.com" uk-icon="icon: uikit; ratio: 7"></a>
                             <a href="https://www.twitch.tv" uk-icon="icon: twitch; ratio: 7"></a>
